fix(spacing on buttons fixed. prev not working in certain plugin environments): spacing on btn fix

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -260,3 +260,13 @@
   margin-top: 10px;
   color: #999;
 }
+.lf-player-controls div {
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.lf-player-controls div:first-child {
+  margin-left: 0px;
+}
+.lf-player-controls div:last-child {
+  margin-right: 0px;
+}
